--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,29 @@ ul.nav-tabs > li > a {
 .nav-hover-container:hover .nav-hover {
 	visibility: visible;
 }
+
+.share {
+  border: 1px solid LightGrey;
+  padding: 40px 0px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.share a {
+  background: darkorange;
+  border: 1px solid darkorange;
+  border-radius: 3px;
+  color: white;
+  display: inline-block;
+  margin: 10px;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.share a:hover {
+  background: white;
+  border: 1px solid darkorange;
+  color: darkorange;
+}
+
